src/view/browser/render/snapshots/nifi_lens__view__browser__render__access_modal__tests__snapshot_loaded_matrix.snap
---
source: src/view/browser/render/access_modal.rs
expression: "format!(\"{}\", term.backend())"
---
"┌ Access · EnrichOrders ───────────────────────────────────────────────────────────────────────────┐"
"│identity                      view   mod    data   oper   pol                                     │"
"│alice@corp                    ✓      ✓      ↑      ↑      —                                       │"
"│bob@corp                      ✓      —      —      —      —                                       │"
"│ops-team                      ✓      ✓      —      ↑      —                                       │"
"│legend  ✓ explicit · ↑ inherited · — none · ? error                                               │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
