src/view/browser/render/snapshots/nifi_lens__view__browser__render__access_modal__tests__snapshot_too_small.snap
---
source: src/view/browser/render/access_modal.rs
expression: "format!(\"{}\", term.backend())"
---
"           terminal too small           "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
